[package]
edition = "2024"
version = "0.1.0"
name = "rslist-api"
authors = ["Victor Vasconcelos"]
description = "A REST API for a to-do list developed with Rust"

[dependencies]
axum = { version = "0.8.8"}
tokio = { version = "1.50.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "postgres"] }

dotenvy = "0.15.7"
thiserror = "2.0.18"

tracing = "0.1.44"
tracing-subscriber = "0.3.22"
